2009-07-14  Zoltan Varga  <vargaz@gmail.com>

	* Environment.cs: Bump corlib version.

2009-07-07  Rodrigo Kumpera  <rkumpera@novell.com>

	* Type.cs (IsUserType): Only TypeDelegator and types
	outside of corlib are unhandled usertypes.

2009-07-02  Marek Safar  <marek.safar@gmail.com>

	* Type.cs, AppDomain.cs: 4.0 bits.

2009-06-26 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* DateTime.cs: if the DateTimeOffset is out of bounds, let Parse
	report the error. Fix stupid harmless typo.
	* DateTimeOffset.cs: report error if the UTC date/time is out of
	bounds.

2009-06-25  Miguel de Icaza  <miguel@novell.com>

	* Array.cs: IList.this needs to throw IndexOutOfRangeException
	when the index is invalid, not ArgumentOutOfRangeException.

	* Int32.cs: Do not crash if the FormatProvider returns a null
	value on the call to GetFormat (Type).

	Validate the NumberStyles, passes Int/Int32Parse2.exe

	Fix regression introduced in 2005, we need to throw
	ArgumentNullException on Parse.

2009-06-25  Miguel de Icaza  <miguel@novell.com>

	* Int32.cs: Fix regression introduced in 2005, we need to throw
	ArgumentNullException on Parse.

2009-06-23 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* DateTime.cs: ignore MinValue to avoid DateTimeOffset ctor throwing
	when adjusting for TZ.

2009-06-22  Miguel de Icaza  <miguel@novell.com>

	* String.cs: In Silverlight the whitespace characters 0x202f and
	0x205f are considered for Trim and Split purposes. 

2009-06-21  Marek Safar  <marek.safar@gmail.com>

	* Tuples.cs: Add Equals, GetHashCode.

2009-06-21  Zoltan Varga  <vargaz@gmail.com>

	* IntPtr.cs (.ctor): Disable the check in the long ctor until we
	can figure out how to do it properly.

2009-06-20  Zoltan Varga  <vargaz@gmail.com>

	* IntPtr.cs (.ctor): Allow long values whose 31th bit is set.

2009-06-18 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* DateTime.cs: quick fix for the 1.x build.

2009-06-18 Gonzalo Paniagua Javier <gonzalo@novell.com>
