@@ -1,3 +1,15 @@
+2009-07-14  Rodrigo Kumpera  <rkumpera@novell.com>
+
+	* Attribute.cs (GetCustomAttributes): Pass typeof(Attribute)
+	to GetCustomAttributes to match MS.
+
+	* MonoCustomAttrs.cs (GetCustomAttributesBase): Do proper
+	checking of which types are handled by the runtime.
+
+	* MonoCustomAttrs.cs (IsDefined): Same.
+
+	Fixes #521885.
+
 2009-07-14  Zoltan Varga  <vargaz@gmail.com>
 
 	* Environment.cs: Bump corlib version.
